# chat

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: docker-deployment.md  plan.md  prd.md  realtime-front-analysis.md  realtime-react-refactor-plan.md  realtime.md
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.js  App.tsx  index.css  main.js
frontend/src/config/: defaults.js  defaults.ts
frontend/src/hooks/: use-mobile.js  use-mobile.ts  use-toast.js  use-toast.ts
frontend/src/services/: api.js  api.ts
frontend/src/store/: useAppStore.js  useAppStore.ts  useToastStore.js  useToastStore.ts
frontend/src/types/: api.ts  conversation.ts
src/: App.tsx  config.rs  error.rs  main.rs  main.tsx  models.rs  utils.rs  vite-env.d.ts
src/components/audio/: AudioInput.tsx  AudioOutput.tsx  AudioRecorder.tsx  AudioVisualizer.tsx  index.ts
src/components/chat/: ChatArea.tsx  ChatInput.tsx  (+3 more)
src/handlers/: chat.rs  health.rs  mod.rs  stt.rs
src/hooks/: useZhipuRealtime.ts
src/lib/: utils.ts
src/pages/: TestConnection.tsx
src/services/: llm.rs  mod.rs  realtime.rs  role.rs  stt.rs  tts.rs  voice-processor.ts  zhipu-websocket.ts
src/stores/: useAppStore.ts  useCallStore.ts  useChatStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: message-factory.ts
(+93 files in other folders)
